<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) Visto Corporation dba Good Technology, 2011. All Rights Reserved. -->
<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Merge in the grey background -->
    <include layout="@layout/gd_common_background_red"/>	
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:weightSum="1.0">
		
	    <!-- Common header elements -->
	    <include layout="@layout/gd_common_powered_by"/>
		<include layout="@layout/gd_common_navbar"/>
		<include layout="@layout/gd_common_spacer"/>

		<!-- Body of the view begins -->
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:layout_weight="0.75"
            android:layout_gravity="center_horizontal">
	
	       <LinearLayout
	            android:id="@+id/linearLayoutEmailTop"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal"
	            android:baselineAligned="false"
	            android:layout_marginTop="12dp">
	        
		       <LinearLayout
		            android:id="@+id/linearLayoutEmail"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:gravity="left"
		            android:layout_weight="1">	        
		            
		            <!-- email address field -->
			        <EditText
			                android:id="@+id/COM_GOOD_GD_EPROV_EMAIL_FIELD"
			                style="@style/GDUIDefaultThemeEditText"
		                    android:layout_width="match_parent"
		                    android:layout_height="wrap_content"
	                        android:layout_gravity="center_vertical"           
			                android:inputType="textEmailAddress"
							android:imeOptions="actionNext"
			                android:nextFocusDown="@+id/editTextForPin1"
			                android:nextFocusRight="@+id/editTextForPin1"/>
		       </LinearLayout>	        
			        
		       <LinearLayout
		            android:id="@+id/linearLayoutInfo"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:gravity="right"
		            android:layout_weight="5">
			        
		            <ImageButton
				            android:id="@+id/COM_GOOD_GD_GDE_PROVISION_VIEW_INFO_BUTTON"
				            android:layout_width="40dp"
				            android:layout_height="40dp"
				            android:background="#00000000"
				            android:scaleType="fitCenter"
				            android:src="@drawable/gd_ui_btn_info"
				            android:contentDescription="@string/COM_GOOD_GD_INFO_BUTTON_DESCRIPTION"/>
	
		        </LinearLayout>	     
	               
	        </LinearLayout> <!-- end of email top layout -->
	
	        <!-- PIN fields -->
	
	        <LinearLayout
	                android:id="@+id/linearLayoutPin"
	                android:layout_width="match_parent"
	                android:layout_height="40dp">
	
	            <EditText
	                android:id="@+id/editTextForPin1"
	                style="@style/GDUIDefaultThemeEditText"
	                android:singleLine="true"
	                android:maxLength="5"
	                android:ems="5"
	                android:layout_weight="1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:inputType="textPassword"
	                android:imeOptions="actionNone"
	                android:nextFocusUp="@+id/COM_GOOD_GD_EPROV_EMAIL_FIELD"
	                android:nextFocusLeft="@+id/COM_GOOD_GD_EPROV_EMAIL_FIELD"
	                android:nextFocusDown="@+id/editTextForPin2"
	                android:nextFocusRight="@+id/editTextForPin2"
	                android:hint="@string/COM_GOOD_GD_EPROV_DLG_ENTER_HINT"/>
	
	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/COM_GOOD_GD_EPROV_DLG_ACCESS_KEY_SEPARATOR"/>
	
	            <EditText
	                android:id="@+id/editTextForPin2"
	                style="@style/GDUIDefaultThemeEditText"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_width="wrap_content"
	                android:singleLine="true"
	                android:maxLength="5"
	                android:ems="5"
	                android:inputType="textPassword"
					android:imeOptions="actionNone"
	                android:nextFocusUp="@+id/editTextForPin1"
	                android:nextFocusLeft="@+id/editTextForPin1"
	                android:nextFocusDown="@+id/editTextForPin3"
	                android:nextFocusRight="@+id/editTextForPin3"
	                android:hint="@string/COM_GOOD_GD_EPROV_DLG_ACCESS_HINT"/>
	
	            <TextView
	                android:id="@+id/textView5"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:text="@string/COM_GOOD_GD_EPROV_DLG_ACCESS_KEY_SEPARATOR"/>
	
	            <EditText
	                android:id="@+id/editTextForPin3"
	                style="@style/GDUIDefaultThemeEditText"
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_weight="1"
	                android:singleLine="true"
	                android:maxLength="5"
	                android:ems="5"
	                android:inputType="textPassword"
	  				android:imeOptions="actionNext"
	                android:nextFocusUp="@+id/editTextForPin2"
	                android:nextFocusLeft="@+id/editTextForPin2"
					android:hint="@string/COM_GOOD_GD_EPROV_DLG_KEY_HINT"/>
	            
	            </LinearLayout> <!-- end of pin layout -->
	    </LinearLayout> <!-- end of body layout -->
	</LinearLayout>
</merge>
